fix: IE11 does not support 'overflow: unset'

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -81,7 +81,7 @@
   }
 
   > .rbc-allday-cell {
-    overflow-y: unset !important;
+    overflow-y: visible !important;
   }
 }
 
